Ajuste no index

--- a/index.html
+++ b/index.html
@@ -11,21 +11,14 @@
 </head>
 
 <body>
-    <!-- Cabeçalho da Página (header) -->
     <header>
-        <!-- Div Conteudo do Cabeçalho -->
         <div id="header_content">
-            <!-- Titulo do Cabeçalho -->
             <div id="titulo">
-                <!-- Seu nome -->
-                <h1>Generation Brasil</h1>
+                <h1>Mateus Camargo</h1>
             </div>
 
-            <!-- Conteudo do Menu da Página (header) -->
             <div id="menu">
-                <!-- Menu da Página -->
                 <nav>
-                    <!-- Marcadores não ordenados + links -->
                     <ul id="menu">
                         <li>
                             <a href="index.html"> Home </a>
@@ -39,13 +32,9 @@
         </div>
     </header>
 
-    <!-- Seção Principal da Página (main) -->
     <main>
 
-        <!-- Seção Formulário de Contato e Redes Sociais -->
         <section id="contact">
-
-            <!-- Seção do Formulário-->
             <form action="#" method="submit">
                 <label for="nome">Nome: </label>
                 <input id="nome" type="text" name="name" placeholder="Digite seu nome" required />
@@ -65,8 +54,6 @@
 
                 <button type="submit">Enviar</button>
             </form>
-
-            <!-- Seção do Google Maps -->
             <article id="mapa">
 
                 <div id="endereco">
@@ -84,9 +71,7 @@
         </section>
     </main>
 
-    <!-- Rodapé da Página (footer) -->
     <footer>
-        <!-- Seção de Contato - Redes Sociais -->
         <section id="redes_sociais">
             <a href="">
                 <img src="assets/img/linkedin.svg" alt="LinkedIn" />
