Add o css para o meu portifólio

--- a/index.html
+++ b/index.html
@@ -2,90 +2,176 @@
 <html lang="pt-br">
 
 <head>
+
+    <!-- Fontes do Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Fonte do Google - Poppins -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Projeto Portfólio">
     <meta name="author" content="Generation Brasil">
     <meta name="keywords" content="HTML, CSS, JavaScript">
-    <title>Meu Perfil</title>
+    <link rel="icon" href="./assets/img/favicon.svg" />
+
+    <!-- Link para a Folha de Estilo da Página - CSS -->
+    <link rel="stylesheet" href="./assets/css/style.css">
+
+    <title>Meu portifólio</title>
 </head>
 
 <body>
-    <header>
-        <div id="header_content">
+    <!-- Cabeçalho da Página (header) -->
+    <header class="flex menu_container">
+
+        <!-- Div Conteudo do Cabeçalho -->
+        <div id="header_content" class="menu_content">
+
+            <!-- Titulo do Cabeçalho -->
             <div id="titulo">
-                <h1>Mateus Camargo</h1>
+
+                <!-- Hyperlink -->
+                <a href="#">Meu portifólio</a>
+
             </div>
 
-            <div id="menu">
+            <!-- Conteudo do Menu da Página (header) -->
+            <div id="menu" class="flex">
+
+                <!-- Menu da Página (nav) -->
                 <nav>
-                    <ul id="menu">
-                        <li>
-                            <a href="index.html"> Home </a>
-                        </li>
-                        <li>
-                            <a href="contato.html"> Contato </a>
-                        </li>
+                    <!-- Marcadores não ordenados -->
+                    <ul class="flex menu_lista">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#about">Sobre</a></li>
+                        <li><a href="#contact">Contate-me</a></li>
                     </ul>
                 </nav>
+
             </div>
+
         </div>
     </header>
 
+    <!-- Seção Principal da Página (main) -->
     <main>
 
-        <section id="contact">
-            <form action="#" method="submit">
+        <!-- Seção Home -->
+        <section id="home" class="home_container">
+
+            <!-- Texto da Seção Home -->
+            <article id="home_texto" class="home_content">
+
+                <h4>Bem-vindo ao meu portifólio</h4>
+                <h1>Mundos diferentes para pessoas diferentes</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quod error veniam in voluptatem magni quisquam
+                </p>
+
+                <a class="botao" target="_blank" href="https://github.com/mateuscamargo">
+                    Explorar
+                </a>
+
+            </article>
+
+            <!-- Imagem da Seção Home -->
+            <article id="home_imagem" class="home_content">
+                <img class="home_content_img" src="./assets/img/astronauta.svg" alt="Capacete de Astronauta Animado">
+            </article>
+
+        </section>
+
+        <!-- Seção About -->
+        <section id="about" class="sobre_container">
+
+            <!-- Foto do Perfil do Github -->
+            <img src="assets/img/user_01.svg" alt="Foto do Perfil do Github">
+
+            <!-- Texto Sobre você -->
+            <article id="sobre_texto">
+
+                <h2>Sobre mim</h2>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quibusdam odit voluptates incidunt inventore rem error harum
+                    blanditiis accusamus vitae, minus fugit consequatur?
+                    Dolorum maiores magni deleniti modi sit laudantium totam!
+                </p>
+
+                <!-- Informações do Github -->
+                <div id="sobre_github" class="flex sobre_github">
+
+                    <a class="botao" target="_blank" href="https://github.com/mateuscamargo">Github</a>
+                    <p>200 Seguidores</p>
+                    <p>50 Repositórios</p>
+
+                </div>
+
+            </article>
+
+        </section>
+
+        <!-- Seção Contact -->
+        <section id="contact" class="contato_container">
+
+            <!-- Seção de Contato - Redes Sociais-->
+            <article id="redes_sociais" class="contato_content">
+
+                <h2>Contate-me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quod error veniam in voluptatem magni quisquam</p>
+
+                <div id="icones_redes_sociais" class="flex social_container">
+                    <a href="https://linkedin.com/in/mateuscamargolima/" target="_blank">
+                        <img class="social_icon" src="assets/img/linkedin.svg" alt="LinkedIn" />
+                    </a>
+                    <a href="https://github.com/mateuscamargo" target="_blank">
+                        <img class="social_icon" src="assets/img/github.svg" alt="Github" />
+                    </a>
+                    <a href="">
+                        <img class="social_icon" src="assets/img/instagram.svg" alt="Instagram" />
+                    </a>
+                </div>
+
+            </article>
+
+            <!-- Seção do Formulário-->
+            <form action="" method="POST">
+
                 <label for="nome">Nome: </label>
-                <input id="nome" type="text" name="name" placeholder="Digite seu nome" required />
+                <input id="nome" type="text" name="name" placeholder="Digite seu nome">
                 <span id="txtNome"></span>
 
                 <label for="email">Email: </label>
-                <input id="email" type="email" name="email" placeholder="Digite seu email" required />
+                <input id="email" type="text" name="email" placeholder="Digite seu email">
                 <span id="txtEmail"></span>
 
                 <label for="subject">Assunto: </label>
-                <input id="subject" type="text" name="subject" placeholder="Digite o título da mensagem" required />
+                <input id="subject" type="text" name="subject" placeholder="Digite o título da mensagem">
                 <span id="txtSubject"></span>
 
                 <label for="message">Mensagem: </label>
-                <textarea id="message" name="message" placeholder="Digite sua mensagem" required>
-					</textarea>
+                <textarea id="message" name="message" placeholder="Digite sua mensagem"></textarea>
+                <span id="txtMensagem"></span>
 
-                <button type="submit">Enviar</button>
+                <button class="botao" type="submit">Enviar</button>
+
             </form>
-            <article id="mapa">
 
-                <div id="endereco">
-                    <p>Av. Paulista, 100</p>
-                    <p>São Paulo - SP</p>
-                </div>
-
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.106696296001!2d-46.65390548535577!3d-23.564611167596592!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c7f481fd9f%3A0x9982bfde4df54830!2sAv.%20Paulista%2C%201000%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001310-100!5e0!3m2!1spt-BR!2sbr!4v1594056507065!5m2!1spt-BR!2sbr"
-                    width="400" height="250" frameborder="0" style="border: 0" allowfullscreen="" aria-hidden="false"
-                    tabindex="0" id="mapa">
-                </iframe>
-
-            </article>
         </section>
+
     </main>
 
-    <footer>
-        <section id="redes_sociais">
-            <a href="">
-                <img src="assets/img/linkedin.svg" alt="LinkedIn" />
-            </a>
-            <a href="">
-                <img src="assets/img/github.svg" alt="Github" />
-            </a>
-            <a href="">
-                <img src="assets/img/instagram.svg" alt="Instagram" />
-            </a>
-        </section>
-
-        <h3>Feito com 🧡 por Mateu Camargo - 2025</h3>
+    <!-- Rodapé da Página (footer) -->
+    <footer class="flex">
+        Feito com 🧡 por Mateus Camargo - Generation Brasil - 2025
     </footer>
+
 </body>
 
 </html>
