Add validação de formulário de contato

--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
         Feito com 🧡 por Mateus Camargo - Generation Brasil - 2025
     </footer>
 
+    <!-- Script JavaScript-->
+    <script src="assets/js/script.js"></script>
+
 </body>
 
 </html>
